hopefully fixed the pictures and height overflow

--- a/styles.css
+++ b/styles.css
@@ -6,26 +6,32 @@
   box-sizing: border-box;
   font-family: "Work Sans", serif;
 }
-html,
-body {
-  height: 100vh;
-}
+
 body {
   background-color: hsl(275, 100%, 97%);
   width: 100%;
+  /* min-width: 930px; */
 }
 
 .hide {
   display: block;
-  max-height: 20px;
 }
 .wrapper {
   position: relative;
   width: 100%;
 }
+.picture {
+  width: 100%;
+}
+.img {
+  width: 100%;
+}
 
+.mobile-image {
+  display: none;
+}
 .container {
-  max-width: 40%;
+  width: 40%;
   background-color: white;
   padding: 2.5rem;
   padding-top: 1.5em;
@@ -34,8 +40,9 @@ body {
   right: 0;
   left: 0;
   margin: 0 auto;
-  top: 200px;
+  top: 150px;
 }
+
 .header {
   display: flex;
   justify-content: flex-start;
@@ -43,7 +50,7 @@ body {
   padding-bottom: 30px;
 }
 
-span {
+.flex {
   display: flex;
   justify-content: space-between;
   gap: 50px;
@@ -75,21 +82,61 @@ footer {
   padding: 0 10px;
   padding-top: 20px;
   margin: 0 90px;
-  /* max-width: 90%; */
-  /* color: green; */
+  max-width: 90%;
+}
+
+@media (max-width: 900px) {
+  html,
+  body {
+    width: 100%;
+    height: 0;
+  }
+
+  .wrapper {
+    width: 100%;
+  }
+
+  .img {
+    width: 100%;
+  }
+
+  .container {
+    width: 50%;
+    padding: 2rem;
+    min-width: 300px;
+    top: 100px;
+  }
+  footer {
+    display: none;
+  }
 }
 
 @media (max-width: 600px) {
   html,
   body {
     width: 100%;
-    height: 100vh;
-    min-width: 280px;
+    min-width: 350px;
+  }
+
+  .wrapper {
+    width: 100%;
+  }
+
+  .img {
+    width: 100%;
+  }
+  .desktop-image {
+    display: none;
+  }
+
+  .mobile-image {
+    display: flex;
   }
   .container {
-    width: 100%;
+    width: 50%;
     padding: 2rem;
-    min-width: 280px;
+    min-width: 300px;
+    top: 140px;
   }
   footer {
     display: none;
